--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 ---
 layout: page
 title: "About"
-description: "Hey, this is BY."
-header-img: "img/post-bg-rwd.jpg"
+description: "Hii, this is Frances/小w."
+header-img: "img/微信图片_20220831190017 bgp-about.jpg"
 ---
 
 <!-- Language Selector -->
@@ -15,12 +15,12 @@ header-img: "img/post-bg-rwd.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>冰冻三尺 非一日之寒<br>
-    积土成山 非斯须之作</p></blockquote>
+    <blockquote><p>凡有所相，皆是虛妄<br>
+    若見諸相非相，即見如來</p></blockquote>
 
-    <p>Hey，我是<strong>柏荧(BY)</strong>，一只iOS程序猿，现在厦门工作。</p>
+    <p>Hii, 這裡是<strong>Frances(小w)</strong>，本體是一棵愛幻想自己會開花的二球懸鈴木，出現時間地點不定。日常以一個看起來很呆的weirdo現象示人。</p>
 
-    <p>工作、学习之余，我还是一个健身爱好者，同时也非常喜欢拳击。</p>
+    <p>除了喜歡冬眠和進行光合作用之外，我還是一位一直在學習feminism的Lib fem. 同時本體作為一棵樹, i am a vegan.</p>
 
     <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/qiubaiying">👉GitHub·BY</a> 与 简书主页<a href="https://http://www.jianshu.com/u/e71990ada2fd">👉BY</a>。如果有什么问题，欢迎提出探讨~</p>
 
@@ -38,14 +38,14 @@ header-img: "img/post-bg-rwd.jpg"
 
 <!-- English Version -->
 <!-- <div class="en post-container">
-    <blockquote><p>Yet another iOS Developer. <br>
-    Yet another Life-long Student.</p></blockquote>
+    <blockquote><p>Misère et grandeur de ce monde : il n’offre point de vérités mais des amours. <br>
+    L’Absurdité règne et l’amour en sauve.</p></blockquote>
 
-    <p>Hi, I am <strong>Baiying Qiu</strong>，you can call me <strong>BY</strong>. I am an iOS software engineer and currently working in Xiamen</p>
+    <p>Hiii, it's <strong>Frances Fu</strong>，you can call me <strong>Fran/Francy/W</strong>. Ich freue mich sehr, dich kennen zu lernen. / 初めまして, どうぞよろしくお願いします。/ 처음 뵙겠습니다, 만나서 반가워요. 잘 부탁합니다. / Nice to meeeet u~</p>
 
-    <p>This is my personal blog, through making Github Pages and Jekyll.My GitHub  👉 <a href="http://github.com/qiubaiying">Github·BY</a>.</p>
-    
-    <p>I am a sports enthusiast, I like fitness, running and boxing.</p>
+    <p>This is my personal blog. I am a medical product designer and currently working in SH.</p>
+   
+    <p>And also, I am a Lib fem & vegan. I love to paint, read, write and go hiking.</p>
 
     <h5>Talks</h5>
 
