--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@ header-img: "img/微信图片_20220831190017 bgp-about.jpg"
 
     <p>除了喜歡冬眠和進行光合作用之外，我還是一位一直在學習feminism的Lib fem. 同時本體作為一棵樹, i am a vegan.</p>
 
-    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/qiubaiying">👉GitHub·BY</a> 与 简书主页<a href="https://http://www.jianshu.com/u/e71990ada2fd">👉BY</a>。如果有什么问题，欢迎提出探讨~</p>
+    <p>這是我利用 <a href="https://pages.github.com/">GitHub Pages</a> 與 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的個人博客，歡迎一起玩耍~</p>
 
     <p></p>
     
@@ -53,7 +53,7 @@ header-img: "img/微信图片_20220831190017 bgp-about.jpg"
     <li><a href="https://github.com">GitHub</a></li>
     <li><a href="http://jekyll.com.cn/">jekyll</a></li>
     <li><a href="https://pages.github.com/">GitHub Pages</a></li>
-    <li><a href="https://qiubaiying.github.io">BY</a></li>
+    <li><a href="https://itsFrancesFu.github.io">Fantasy_Fran</a></li>
     </ul>
 </div> -->
 
