--- a/about.html
+++ b/about.html
@@ -20,9 +20,9 @@ header-img: "img/微信图片_20220831190017 bgp-about.jpg"
 
     <p>Hii, 這裡是<strong>Frances(小w)</strong>，本體是一棵愛幻想自己會開花的二球懸鈴木，出現時間地點不定。日常以一個看起來很呆的weirdo現象示人。</p>
 
-    <p>除了喜歡冬眠和進行光合作用之外，我還是一位一直在學習feminism的Lib fem. 同時本體作為一棵樹, i am a vegan.</p>
+    <p>除了喜歡冬眠和進行光合作用之外，我還是一個一直在研究feminism和與其交叉議題的Lib fem. 同時本體作為一棵樹, i am a vegan. 歡迎來我的博客與我進行交流探討！</p>
 
-    <p>這是我利用 <a href="https://pages.github.com/">GitHub Pages</a> 與 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的個人博客，歡迎一起玩耍~</p>
+    <p>這是我利用 <a href="https://pages.github.com/">GitHub Pages</a> 與 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的個人博客，歡迎一起在這片自由的草坪上玩耍~</p>
 
     <p></p>
     
