--- a/tags.html
+++ b/tags.html
@@ -1,8 +1,8 @@
 ---
 title: Tags
 layout: default
-description: keep hungry keep foolish
-header-img: "img/tag-bg.jpg"
+description: die Ewigkeit ist bloß ein Augenblick, gerade lang genug für einen Spaß.
+header-img: "img/微信图片_20220925042505 xizang.jpg"
 ---
 
 <!-- Page Header -->
